Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-18412

Crash in sendPostedEvents() - QObject::isWidgetType() (issue with QDeclarativePixmapReply)

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 4.7.4
    • 4.7.2
    • None
    • Operating system:
      Microsoft Windows XP 32-bit Edition
      Language: English
      Microsoft Visual Studio 2008
    • 462429f5692f810bdd4e04b916db5f9af428d9e4

    Description

      Call Stack

      QtCore4!QObject::isWidgetType+0x3
      QtGui4!QWindowsStyle::eventFilter+0x38
      QtCore4!QCoreApplicationPrivate::sendThroughApplicationEventFilters+0x5d
      QtGui4!QApplicationPrivate::notify_helper+0x15
      QtGui4!QApplication::notify+0x136d
      QtCore4!QCoreApplication::notifyInternal+0x8d
      QtCore4!QCoreApplication::sendEvent+0x26
      QtCore4!QCoreApplicationPrivate::sendPostedEvents+0x1ec
      QtCore4!qt_internal_proc+0x191
      user32!InternalCallWinProc+0x23
      user32!UserCallWinProcCheckWow+0x109
      user32!DispatchMessageWorker+0x3bc
      user32!DispatchMessageW+0xf
      QtCore4!QEventDispatcherWin32::processEvents+0x52a
      QtGui4!QGuiEventDispatcherWin32::processEvents+0xf
      QtCore4!QEventLoop::exec+0x100
      QtCore4!QCoreApplication::exec+0x106
      qmlviewer!main+0x58c
      qmlviewer!WinMain+0xb8
      qmlviewer!__tmainCRTStartup+0x140

      The event getting processed matches the id / signal id (id = 5 and signaled = 13) of

      void QDeclarativePixmapReply::downloadProgress(qint64 _t1, qint64 _t2)

      I have reproduced this bug, using a cut down version of one of the example QML projects.

      Its hard to reproduce, but easier the slower your network connection is.

      1) Open C:\Qt\4.7.1_SHARED_v2\bin\qmlviewer.exe
      2) Open flickr-90.qml in qmlviewer
      3) Wait for the images to start to load
      4) Scroll very quickly back and forth

      I find it eayer to repoduce if I am on the wireless LAN and copying a large file from a network drive at the same time (i.e. try to slow the network connection)

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            martjone Martin Jones (closed Nokia identity) (Inactive)
            chrisb112 Chris Byrne
            Votes:
            1 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes