Canceling image download while reading causes crash

We were deleting a QObject owned by another thread, which is fine if
there are no pending events, but very bad if there are, e.g.
queued signals due to downloadProgress() updates.  Use deleteLater()
which is safe to call in any thread.
Also call QDeclarativePixmap::clear(QObject *obj) where appropriate
to remove connections and ensure we don't handle any unwanted signals
after the download is cancelled.

Change-Id: Ia8fb41a8cd004d9840e7cec35915f1afdb03ac4d
Task-number: QTBUG-18412
Reviewed-by: Aaron Kennedy